# my-first-juce-with-webview

./: .gitignore  CMakeLists.txt
plugin/: CMakeLists.txt
plugin/include/JuceWebViewPlugin/: PluginEditor.h  PluginProcessor.h
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
plugin/src/ui/public/: index.html
plugin/ui/public/: index.html
plugin/ui/public/js/: index.js
